// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Menu should only render add-menu for participants 1`] = `
<div
  class="menu-bars menu-bars--user false"
>
  <div
    class="menu user-menu"
  >
    <div
      class="menu__items"
    >
      <button
        class="menu-item menu-item1 menu-item--disabled menu-item--right"
      >
        <div
          class="menu-item__tooltip"
        >
          <span
            class="tooltip__text"
          >
            MARK ME AS DONE
          </span>
        </div>
        <svg
          class="menu-item__icon menu-item__icon--end"
        >
          icon-close.svg
        </svg>
        <svg
          class="menu-item__icon menu-item__icon--start"
        >
          icon-check.svg
        </svg>
      </button>
      <button
        class="menu-item menu-item2 menu-item--right"
      >
        <div
          class="menu-item__tooltip"
        >
          <span
            class="tooltip__text"
          >
            ADD IMAGE OR GIPHY
          </span>
        </div>
        <svg
          class="menu-item__icon menu-item__icon--start"
        >
          icon-addimage.svg
        </svg>
      </button>
      <button
        class="menu-item menu-item3 menu-item--right"
      >
        <div
          class="menu-item__tooltip"
        >
          <span
            class="tooltip__text"
          >
            ADD STICKER
          </span>
        </div>
        <svg
          class="menu-item__icon menu-item__icon--start"
        >
          icon-addsticker.svg
        </svg>
      </button>
      <button
        class="menu-item menu-item4 menu-item--right"
      >
        <div
          class="menu-item__tooltip"
        >
          <span
            class="tooltip__text"
          >
            SETTINGS
          </span>
        </div>
        <svg
          class="menu-item__icon menu-item__icon--start"
        >
          icon-settings.svg
        </svg>
      </button>
    </div>
  </div>
</div>
`;

exports[`Menu should render both add- and settings-menu for moderators 1`] = `
<div
  class="menu-bars menu-bars--user menu-bars--isAdmin"
>
  <div
    class="menu user-menu"
  >
    <div
      class="menu__items"
    >
      <button
        class="menu-item menu-item1 menu-item--disabled menu-item--right"
      >
        <div
          class="menu-item__tooltip"
        >
          <span
            class="tooltip__text"
          >
            MARK ME AS DONE
          </span>
        </div>
        <svg
          class="menu-item__icon menu-item__icon--end"
        >
          icon-close.svg
        </svg>
        <svg
          class="menu-item__icon menu-item__icon--start"
        >
          icon-check.svg
        </svg>
      </button>
      <button
        class="menu-item menu-item2 menu-item--right"
      >
        <div
          class="menu-item__tooltip"
        >
          <span
            class="tooltip__text"
          >
            ADD IMAGE OR GIPHY
          </span>
        </div>
        <svg
          class="menu-item__icon menu-item__icon--start"
        >
          icon-addimage.svg
        </svg>
      </button>
      <button
        class="menu-item menu-item3 menu-item--right"
      >
        <div
          class="menu-item__tooltip"
        >
          <span
            class="tooltip__text"
          >
            ADD STICKER
          </span>
        </div>
        <svg
          class="menu-item__icon menu-item__icon--start"
        >
          icon-addsticker.svg
        </svg>
      </button>
      <button
        class="menu-item menu-item4 menu-item--right"
      >
        <div
          class="menu-item__tooltip"
        >
          <span
            class="tooltip__text"
          >
            SETTINGS
          </span>
        </div>
        <svg
          class="menu-item__icon menu-item__icon--start"
        >
          icon-settings.svg
        </svg>
      </button>
    </div>
  </div>
  <div
    class="menu admin-menu"
  >
    <div
      class="menu__items"
    >
      <button
        class="menu-item menu-item1 menu-item--disabled menu-item--left"
      >
        <div
          class="menu-item__tooltip"
        >
          <span
            class="tooltip__text"
          >
            START COLUMN MODE
          </span>
        </div>
        <svg
          class="menu-item__icon menu-item__icon--end"
        >
          icon-close.svg
        </svg>
        <svg
          class="menu-item__icon menu-item__icon--start"
        >
          icon-column.svg
        </svg>
      </button>
      <button
        class="menu-item menu-item2 menu-item--disabled menu-item--left"
      >
        <div
          class="menu-item__tooltip"
        >
          <span
            class="tooltip__text"
          >
            START TIMER
          </span>
        </div>
        <svg
          class="menu-item__icon menu-item__icon--end"
        >
          icon-close.svg
        </svg>
        <svg
          class="menu-item__icon menu-item__icon--start"
        >
          icon-timer.svg
        </svg>
      </button>
      <button
        class="menu-item menu-item3 menu-item--disabled menu-item--left"
      >
        <div
          class="menu-item__tooltip"
        >
          <span
            class="tooltip__text"
          >
            START VOTING PHASE
          </span>
        </div>
        <svg
          class="menu-item__icon menu-item__icon--end"
        >
          icon-close.svg
        </svg>
        <svg
          class="menu-item__icon menu-item__icon--start"
        >
          icon-vote.svg
        </svg>
      </button>
      <button
        class="menu-item menu-item4 menu-item--disabled menu-item--left"
      >
        <div
          class="menu-item__tooltip"
        >
          <span
            class="tooltip__text"
          >
            START FOCUSED MODE
          </span>
        </div>
        <svg
          class="menu-item__icon menu-item__icon--end"
        >
          icon-close.svg
        </svg>
        <svg
          class="menu-item__icon menu-item__icon--start"
        >
          icon-focus.svg
        </svg>
      </button>
    </div>
  </div>
  <button
    class="menu-bars__switch"
  >
    <svg
      class="switch__icon switch__icon--add"
    >
      icon-toggle-add-menu.svg
    </svg>
    <svg
      class="switch__icon switch__icon--settings"
    >
      icon-toggle-settings-menu.svg
    </svg>
  </button>
</div>
`;
